--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ obj/Debug/ChatBot.njsproj.FileListAbsolute.txt
 obj/Debug/ChatBot.njsprojResolveAssemblyReference.cache
 providers/hangouts.json
 providers/skype.json
+.ntvs_analysis.dat.tmp
