--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-providers/facebooka.json
+providers/facebook.json
 .ntvs_analysis.dat
 bin/Microsoft.NodejsTools.WebRole.dll
 *.njsproj
 obj/Debug/ChatBot.njsproj.FileListAbsolute.txt
 obj/Debug/ChatBot.njsprojResolveAssemblyReference.cache
-providers/hangoutsa.json
-providers/skypea.json
+providers/hangouts.json
+providers/skype.json
 .ntvs_analysis.dat.tmp
