--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "author": {
     "name": "Angus",
     "email": ""
+  },
+  "dependencies": {
+    "colors": "^1.1.2",
+    "strftime": "^0.9.2"
   }
 }
