More descriptive logging on message recieve

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ obj/Debug/ChatBot.njsprojResolveAssemblyReference.cache
 providers/hangouts.json
 providers/skype.json
 .ntvs_analysis.dat.tmp
+plugins/bridge/bridges.json
