--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ChatBot",
   "main": "app.js",
   "author": {
-    "name": "Angus",
+    "name": "Angus Trau",
     "email": ""
   },
   "dependencies": {
